added filter demodays by date status

--- a/showtime/demodays/templates/demodays/detail_demoday.html
+++ b/showtime/demodays/templates/demodays/detail_demoday.html
@@ -5,7 +5,6 @@
     <title>DemoDay</title>
 </head>
 <body>
-    <h1>{{ demoday.test_text }}</h1>
-    <p>{{ demoday.date }}</p>
+    <p>{{ demoday }}</p>
 </body>
 </html>
